[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Rede-Rounded-F99.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Invader.tres" type="DynamicFont" id=3]
[ext_resource path="res://Styles/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/ButtonHover.tres" type="StyleBox" id=5]
[ext_resource path="res://Styles/ButtonPressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Styles/ButtonDisabled.tres" type="StyleBox" id=7]
[ext_resource path="res://Audio/Select.wav" type="AudioStream" id=8]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 0.841
margin_right = 1024.0
margin_bottom = 600.841

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
align = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 117.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 1024.0
margin_bottom = 290.0

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 145.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="SettingsBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 874.0
margin_bottom = 169.0
size_flags_horizontal = 3

[node name="SFXSettingBox2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsBox"]
margin_right = 725.0
margin_bottom = 53.0

[node name="SFXSettingLabel" type="Label" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox2"]
margin_top = 1.0
margin_right = 104.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox2"]
margin_left = 108.0
margin_right = 596.0
margin_bottom = 53.0
size_flags_horizontal = 3

[node name="OnButton" type="Button" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox2"]
margin_left = 600.0
margin_right = 658.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "On"

[node name="OffButton" type="Button" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox2"]
margin_left = 662.0
margin_right = 725.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "Off"

[node name="SFXSettingBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SettingsBox"]
margin_top = 57.0
margin_right = 725.0
margin_bottom = 108.0

[node name="SFXSettingLabel" type="Label" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox"]
margin_right = 65.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "SFX"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox"]
margin_left = 69.0
margin_right = 645.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="SFXSetting" type="CheckButton" parent="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox"]
margin_left = 649.0
margin_right = 725.0
margin_bottom = 51.0
pressed = true

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer/SettingsBox"]
margin_top = 112.0
margin_right = 725.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( -265, 91 )
size_flags_vertical = 3

[node name="ResetProgressButton" type="Button" parent="VBoxContainer/HBoxContainer/SettingsBox"]
margin_top = 116.0
margin_right = 725.0
margin_bottom = 169.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "Reset Progress"

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 878.0
margin_right = 1024.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 294.0
margin_right = 1024.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( -265, 91 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 1024.0
margin_bottom = 400.0

[node name="Spacer1" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_right = 338.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( -265, 91 )
size_flags_horizontal = 3

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 53.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "Back"

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( -265, 91 )
size_flags_horizontal = 3

[node name="Spacer3" type="Control" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -265, 91 )
size_flags_vertical = 3

[node name="SelectSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox2/OnButton" to="." method="_on_OnButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox2/OffButton" to="." method="_on_OffButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SettingsBox/SFXSettingBox/SFXSetting" to="." method="_on_SFXSetting_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsBox/ResetProgressButton" to="." method="_on_ResetProgressButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/MenuButton" to="." method="_on_MenuButton_pressed"]
